--- a/index.css
+++ b/index.css
@@ -12,8 +12,8 @@ h1, h2, h3 {
 
 /* Header */
 header {
-    background-color: #0b3d41;
-    color: #fff;
+    background-color:#ac470d;
+    color: #ffffff;
     padding: 1rem 0;
 }
 
@@ -24,14 +24,14 @@ header .container {
 }
 
 header .nav-link {
-    color: #fff;
+    color: #c09999;
     margin-left: 15px;
     text-decoration: none;
 }
 
 
 .hero {
-    background-color: #09acdd;
+    background-color:peru;
     color: white;
     text-align: center;
     padding: 50px 20px;
@@ -46,9 +46,13 @@ header .nav-link {
 }
 
 .biografia {
-    padding: 40px 20px;
-    background-color: #fff;
-    text-align: center;
+    margin: 20px auto;
+    padding: 20px;
+    max-width: 900px;
+    background-color: rgba(255, 115, 0, 0.226);
+    border-radius: 8px;
+    box-shadow:maroon;
+   
 }
 
 .biografia p {
@@ -57,18 +61,18 @@ header .nav-link {
 
 
 .logros {
-    background-color: #f8f9fa;
+    background-color: rgba(255, 115, 0, 0.226);
     padding: 40px 20px;
 }
 
 .logros .card {
     border: none;
-    background-color: #e9ecef;
+    background-color: rgba(255, 115, 0, 0.226);
 }
 
 .citas {
-    background-color: #333;
-    color: white;
+    background-color: rgba(255, 115, 0, 0.226);
+    color: rgba(255, 115, 0, 0.226);
     padding: 40px 20px;
     text-align: center;
     font-style: italic;
